# Netflix-Clone

./: README.md
backend/contentservice/: Dockerfile  README.md
backend/contentservice/app/: content.py
backend/contentservice/content-service/: pyproject.toml
backend/streamingservice/: Dockerfile  README.md  package-lock.json  package.json
backend/streamingservice/src/: app.module.ts
backend/streamingservice/src/api/stream/: stream.controller.ts
backend/userservice/: .gitignore  Dockerfile  README.md  pom.xml
backend/userservice/src/main/java/com/netflixclone/userservice/: UserserviceApplication.java
backend/userservice/src/main/java/com/netflixclone/userservice/controller/: UserController.java
backend/userservice/src/main/java/com/netflixclone/userservice/model/: User.java
backend/userservice/src/main/java/com/netflixclone/userservice/repository/: UserRepository.java
backend/userservice/src/main/java/com/netflixclone/userservice/service/: UserService.java
backend/userservice/src/test/java/com/netflixclone/userservice/: UserControllerTest.java  UserServiceTest.java  UserserviceApplicationTests.java
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/lib/api/: apiConfig.ts  user.ts
k8s/: README.md  content-service-deployment.yaml  deploy-local.sh  ingress.yaml  kind-cluster-config.yaml  streaming-service-deployment.yaml  user-service-deployment.yaml
