[tool.poetry]
name = "content-service"
version = "0.1.0"
description = ""
authors = ["Joe McGirr <joe.mcgirr@bjss.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
